# sbom-overlay

./: .gitignore  BACKLOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.github/workflows/: ci.yml  scorecard.yml
artifacts/: README.md
docs/: ARCHITECTURE.md  WORKFLOW.md
sbom_overlay/: __main__.py  cli.py
sbom_overlay/parsers/: cyclonedx.py  model.py  spdx.py
sbom_overlay/reconcile/: diff.py  equivalence.py
sbom_overlay/report/: markdown.py
sbom_overlay/support/: log.py
scripts/: refresh_dogfood.sh
tests/: test_dogfood.py  test_equivalence.py  test_reconcile.py  test_report.py  test_smoke.py  test_spdx_parser.py
tests/fixtures/dogfood/dicom-fuzzer-1.11.0/: README.md  manual.spdx  syft.spdx.json
tests/fixtures/spdx/: affinity_minimal.spdx.json  tagvalue_minimal.spdx
