[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sbom-overlay"
version = "0.0.1"
description = "Reconcile manual SPDX SBOMs against Syft-generated SBOMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "David Dashti"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.urls]
Repository = "https://github.com/Dashtid/sbom-overlay"
Issues = "https://github.com/Dashtid/sbom-overlay/issues"

[project.scripts]
sbom-overlay = "sbom_overlay.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.11",
    "bandit>=1.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "SIM",  # flake8-simplify
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",
    "S108",
    "SIM117",
]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.coverage.run]
omit = ["sbom_overlay/__main__.py"]
branch = true
